# python-project-lvl1

./: pyproject.toml
brain_games/scripts/: brain_games.py
